--- a/about-us.html
+++ b/about-us.html
@@ -55,7 +55,7 @@
         <div class="main">
             <div class="profile-card">
                 <div class="img">
-                    <img src="images/namaraj.JPG">
+                    <img src="images/namaraj.jpg">
                     <h1> <center> Paudel Namaraj <i>(M22W0407)</i></center></h1>
                 </div>
                 <div class="caption">
