--- a/about-us.html
+++ b/about-us.html
@@ -83,7 +83,7 @@
             </div>
             <div class="profile-card">
                 <div class="img">
-                    <img src="images/person_logo.jpg">
+                    <img src="images/Asis.jpeg">
                     <h1> <center> Thapa Ashish  <i>(M22W7214)</i></center></h1>
                 </div>
                 <div class="caption">
@@ -111,7 +111,7 @@
             </div>
             <div class="profile-card">
                 <div class="img">
-                    <img src="images/person_logo.jpg">
+                    <img src="images/deepak.jpg">
                     <h1> <center> Belbase Deepak <i>(M22W0195)</i></center></h1>
                 </div>
                 <div class="caption">
@@ -153,7 +153,7 @@
             </div>
             <div class="profile-card">
                 <div class="img">
-                    <img src="images/person_logo.jpg">
+                    <img src="images/Samita.jpg">
                     <h1> <center> Limbu Samita <i>(M22W0407)</i></center></h1>
                 </div>
                 <div class="caption">
@@ -167,7 +167,7 @@
             </div>
             <div class="profile-card">
                 <div class="img">
-                    <img src="images/person_logo.jpg">
+                    <img src="images/Rama.jpg">
                     <h1> <center> Tamang Rama <i>(M22W7255)</i></center></h1>
                 </div>
                 <div class="caption">
