--- a/kiyomizu-dera_temple.html
+++ b/kiyomizu-dera_temple.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/details.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/details.css">
 
 </head>
 
