--- a/about-us.html
+++ b/about-us.html
@@ -69,7 +69,7 @@
             </div>
             <div class="profile-card">
                 <div class="img">
-                    <img src="images/person_logo.jpg">
+                    <img src="images/prabin.jpg">
                     <h1> <center> Subedi Prabin <i>(M22W7191)</i></center></h1>
                 </div>
                 <div class="caption">
