--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <section class="footer">
     <div class="container">
         <div class="card">
-            <h3>about us</h3>
+            <h3>About Us</h3>
             <p>We offer the best limits on our top-rated visit bundles to clients who pick our viable
                 administrations
                 over and over.</p>
@@ -11,16 +11,16 @@
             <a href="https://www.kiyomizudera.or.jp/en/">Kiyomizu-dera Temple</a>
         </div>
         <div class="card">
-            <h3>useful links</h3>
-            <a href="#">todo</a>
+            <h3>Useful Links</h3>
+            <a href="#">Todo</a>
         </div>
         <div class="card">
-            <h3>follow us</h3>
-            <a href="#">facebook</a>
-            <a href="#">instagram</a>
-            <a href="#">twitter</a>
+            <h3>Follow Us</h3>
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">Twitter</a>
         </div>
 
     </div>
-    <h1 class="credit"> created by <span> Group 6 </span> | all rights reserved! </h1>
+    <h1 class="credit"> Created By <span> Group 6 </span> | All Rights Reserved! </h1>
 </section>
