--- a/header.html
+++ b/header.html
@@ -4,6 +4,7 @@
     <a href="index.html"><b>Home</b></a>
     <a href="index.html#top"><b>Visiting Places</b></a>
     <a href="index.html#railway"><b>Railway Lines</b></a>
+    <a href="kyoto-city-bus.html"><b>Kyoto City Bus</b></a>
     <a href="contact.html"><b>Contact Us</b></a>
     <a href="about-us.html"><b>About Us</b></a>
 </nav>
