updated about us

--- a/about-us.html
+++ b/about-us.html
@@ -139,7 +139,7 @@
             </div>
             <div class="profile-card">
                 <div class="img">
-                    <img src="images/person_logo.jpg">
+                    <img src="images/pema.jpg">
                     <h1> <center> Thapa Pema <i>(M22W7212)</i></center></h1>
                 </div>
                 <div class="caption">
