updatd raiway page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                 </a>
             </div>
 
-
             <div class="card">
                 <a href="#">
                     <img src="images/bamboo-grove.jpg" alt="">
@@ -108,7 +107,6 @@
                 </a>
             </div>
 
-
             <div class="card">
                 <a href="#">
                     <img src="images/bamboo-grove.jpg" alt="">
@@ -117,7 +115,6 @@
                     </div>
                 </a>
             </div>
-
 
             <div class="card">
                 <a href="#">
@@ -141,7 +138,7 @@
 
         <div class="container">
             <div class="card">
-                <a href="site-listing.html">
+                <a href="karasuma.html">
                     <img src="images/karasuma.jpg" alt="">
                     <div class="content">
                         <h3>Karasuma Line </h3>
@@ -151,7 +148,7 @@
             </a>
 
             <div class="card">
-                <a href="site-listing.html">
+                <a href="#">
                     <img src="images/tozai.jpg" alt="">
                     <div class="content">
                         <h3> Tōzai Line </h3>
@@ -160,7 +157,7 @@
             </div>
 
             <div class="card">
-                <a href="site-listing.html">
+                <a href="#">
                     <img src="images/keifuku.jpg" alt="">
                     <div class="content">
                         <h3>Keifuku Line (Randen) </h3>
@@ -169,7 +166,7 @@
             </div>
 
             <div class="card">
-                <a href="site-listing.html">
+                <a href="#">
                     <img src="images/keihan.jpg" alt="">
                     <div class="content">
                         <h3> Keihan Line </h3>
@@ -178,7 +175,7 @@
             </div>
 
             <div class="card">
-                <a href="site-listing.html">
+                <a href="#">
                     <img src="images/kintestu.jpg" alt="">
                     <div class="content">
                         <h3> Kintestu Line </h3>
@@ -187,7 +184,7 @@
             </div>
 
             <div class="card">
-                <a href="site-listing.html">
+                <a href="#">
                     <img src="images/sagano.jpg" alt="">
                     <div class="content">
                         <h3> Sagano Scenic Line </h3>
@@ -196,7 +193,7 @@
             </div>
 
             <div class="card">
-                <a href="site-listing.html">
+                <a href="#">
                     <img src="images/hyanku.jpg" alt="">
                     <div class="content">
                         <h3> Hankyū Line </h3>
@@ -205,7 +202,7 @@
             </div>
 
             <div class="card">
-                <a href="site-listing.html">
+                <a href="#">
                     <img src="images/eizan.jpg" alt="">
                     <div class="content">
                         <h3> Eizan Line </h3>
@@ -214,7 +211,7 @@
             </div>
 
             <div class="card">
-                <a href="site-listing.html">
+                <a href="#">
                     <img src="images/jr.jpg" alt="">
                     <div class="content">
                         <h3> JR Line </h3>
