--- a/about-us.html
+++ b/about-us.html
@@ -44,52 +44,9 @@
         <div class="content">
             <p><b>GROUP 6 | Kyoto Guider</b> <br><br>
 
-
-            <p>    Leadership Project - Group 6 
-“Website for Living Guide in Kyoto for International Students”<br><br>
-             Work Distribution for this project<br><br>
-
-1.  How to search for a destination place on Google Maps and its cost and time.     - Thapa Pema
--   Screen record
--   Find one particular site and search the route with different options available on google maps like less walking, best route, less transfer, and other options that are available on it. 
--   Show default view, and satellite view, and use other options too that are available on it.<br><br>
-
-2.  How to use an ICOCA card        - Bist Arayan
--   Write the script for the video first by mentioning each step that you are going to show in the video.
--   Make a video that captures how to create an ICOCA card, and recharge that card.
--   Video should be in landscape mode, should be clear, and do not miss any steps that are mentioned in the script. <br><br>
-
-3.  How to use Bus, Train to travel from one place to another?  - Subedi Prabin
--   First, write a script for a video for better commentary. 
--   Please collaborate with Thapa Pema and find a destination site.
--   Then, Use the ICOCA card to enter the gate.
--   Please make a video of the destination site with a cinematic view as soon as possible. Also, capture beautiful images.<br><br>
-
-
-
-
-4.  How to manage household garbage.    - Bhujel Pratik
--   Please write down notes like the article. Please do not copy the content from the other websites. If you are using a reference from other sources don’t miss save that link, that will be the useful link for the website and reference link for the final report.
--   You can take help from other members too.<br><br>
-
-5.  How to buy daily needed foods.  - Belbase Deepak
--   Please refer to point no. 4 and write descriptive information on your topic.<br><br>
-
-6.  Information for most visiting places in Kyoto and a travel guide.   - Samita, Rama
--   Please search top visiting places in Kyoto.
--   Please write descriptive information on this site.
--   Save the images.
--   Don’t forget to save url link also. <br><br>
-
-
-
-7.  Website Design and dummy data.  - Ashis, Namaraj
--   Please make a raw design for the website.
--   Please find out the color gradient that you are going to use.
--   Please fixed how many pages you are going to make.
--   Make website responsiveness as can as possible.</p><br><br>
-
-<br><br>
+                “Travel is the main thing you purchase that makes you more extravagant”. We, at Group 6,
+                swear by this and put stock in satisfying travel dreams that make you perpetually rich
+                constantly.<br><br>
         </div>
 
         <div class="team">
