--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="Arashiyama Bamboo Forest.html">
                     <img src="images/bamboo-grove.jpg" alt="">
                     <div class="content">
                         <h4>Arashiyama Bamboo Grove</h4>
@@ -63,7 +63,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="Kyoto Imperial Palace.html">
                     <img src="images/imperial-palace.jpg" alt="">
                     <div class="content">
                         <h4>Kyoto Imperial Palace</h4>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="kinkakuji.html">
                     <img src="images/kinkaku-ji-golden-pavilion.jpg" alt="">
                     <div class="content">
                         <h4> Kinkaku-ji: The Golden Pavilion</h4>
@@ -81,7 +81,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="kifune.html">
                     <img src="images/kifune-shrine.jpeg" alt="">
                     <div class="content">
                         <h4>Kifune Shrine</h4>
@@ -90,7 +90,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="Fushimi Inari-taisha.html">
                     <img src="images/fushimi-inari taisha.jpg" alt="">
                     <div class="content">
                         <h4>Fushimi Inari Taisha</h4>
@@ -99,28 +99,28 @@
             </div>
 
             <div class="card">
-                <a href="#">
-                    <img src="images/bamboo-grove.jpg" alt="">
+                <a href="nijo castle.html">
+                    <img src="images/nijo2.jpg" alt="">
                     <div class="content">
-                        <h4>Arashiyama Bamboo Grove</h4>
+                        <h4>Nijō Castle</h4>
                     </div>
                 </a>
             </div>
 
             <div class="card">
-                <a href="#">
-                    <img src="images/bamboo-grove.jpg" alt="">
+                <a href="Iwatayama Monkey Park.html">
+                    <img src="images/monkey5.jpg" alt="">
                     <div class="content">
-                        <h4>Arashiyama Bamboo Grove</h4>
+                        <h4>Arashiyama Monkey Park Iwatayama</h4>
                     </div>
                 </a>
             </div>
 
             <div class="card">
-                <a href="#">
-                    <img src="images/bamboo-grove.jpg" alt="">
+                <a href="Ryōan-ji.html">
+                    <img src="images/ryon2.jpg" alt="">
                     <div class="content">
-                        <h4>Arashiyama Bamboo Grove</h4>
+                        <h4>Ryōan-ji</h4>
                     </div>
                 </a>
             </div>
@@ -148,7 +148,7 @@
             </a>
 
             <div class="card">
-                <a href="#">
+                <a href="Tozai.html">
                     <img src="images/tozai.jpg" alt="">
                     <div class="content">
                         <h3> Tōzai Line </h3>
@@ -157,7 +157,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="Keifuku Line (Randen).html">
                     <img src="images/keifuku.jpg" alt="">
                     <div class="content">
                         <h3>Keifuku Line (Randen) </h3>
@@ -166,7 +166,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="keihan.html">
                     <img src="images/keihan.jpg" alt="">
                     <div class="content">
                         <h3> Keihan Line </h3>
@@ -175,7 +175,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="Kintetsu.html">
                     <img src="images/kintestu.jpg" alt="">
                     <div class="content">
                         <h3> Kintestu Line </h3>
@@ -184,7 +184,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="The Sagano Scenic Railway.html">
                     <img src="images/sagano.jpg" alt="">
                     <div class="content">
                         <h3> Sagano Scenic Line </h3>
@@ -193,7 +193,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="hyanku.html">
                     <img src="images/hyanku.jpg" alt="">
                     <div class="content">
                         <h3> Hankyū Line </h3>
@@ -202,7 +202,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="Eizan.html">
                     <img src="images/eizan.jpg" alt="">
                     <div class="content">
                         <h3> Eizan Line </h3>
@@ -211,7 +211,7 @@
             </div>
 
             <div class="card">
-                <a href="#">
+                <a href="JR.html">
                     <img src="images/jr.jpg" alt="">
                     <div class="content">
                         <h3> JR Line </h3>
