--- a/karasuma.html
+++ b/karasuma.html
@@ -37,11 +37,10 @@
 
     <section class="overview">
         <div class="container">
-            <h4><i class="fa fa-train" aria-hidden="true"></i> Karasuma Line</h4>
+            <h4><i class="fa fa-train" aria-hidden="true"></i> The Karasuma Line</h4>
             <img src="images/karasuma.jpg" alt="">
 
-            <p>The Kyoto Subway Karasuma Line connects northern Kyoto and southern Kyoto between Kokusaikaikan Station
-                (K01) and Takeda Station (K15).
+            <p>The Karasuma Line is one of two subway lines operated by Kyoto Municipal Subway. The line runs north to south between Kokusaikaikan Station and Takeda Station. It is called the Karasuma Line because for much of the way it runs beneath Karasuma Street. At Karasuma Oike Station it connects with the other subway line, the Tozai Line, which runs east to west.
                 <br><br>
                 The trains operate from approximately 5:30 to 23:50. The minimum fare is
                 ¥220 for adults and ¥110 for children.
